Remove use of Guava in common code
Minecraft uses too many different Guava versions for this to work
reliably